# CS336-Chinese-co-construction

./: .gitignore  README.md
coursework/Assignment1_Basics/: CS336_Assignment1_BPE.ipynb  CS336_Assignment1_Transformer.ipynb  README.md  train.py
coursework/Assignment2_System/: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt  【翻译】cs336_spring2025_assignment2_systems.md
coursework/Assignment2_System/cs336-basics/cs336_basics/: model.py
coursework/Assignment2_System/cs336_systems/: benchmark_results.json  ddp_bucketed_benchmark_complete.py  ddp_model_demo.py  ddp_overlap_individual_parameters.py  demo.ipynb  distributed_demo.py  flash_attention.py  flash_attention_triton.py  my_profile.py  sanity.pickle  sharded_optimizer.py  作业1.ipynb  作业2.ipynb
coursework/Assignment2_System/cs336_systems/memory_snapshots/: 前向传播.pickle
coursework/Assignment2_System/cs336_systems/results/: all_reduce_results.csv
coursework/Assignment2_System/tests/: adapters.py  test_ddp.py
coursework/Assignment2_System/相关文档/: CHANGELOG.md  【导读】cs336_spring2025_assignment2_systems.md
coursework/Assignment3_Scaling/: README.md  fit_scaling.py  predict loss.py  scaling.py  test1.py  train.py  配置.text
coursework/Assignment4_Data/: .gitignore  pyproject.toml
coursework/Assignment6_Evaluation/: README.md  evalscope_demo.py  lm_eval_demo.py
coursework/assignment1-basics/: get  train data.py  model.py
coursework/assignment2-systems/: .gitignore  main.py  pyproject.toml
docs/: CNAME  README.md  _config.yml  _sidebar.md  index.html  前言.md
docs/chapter10/: 推理.md
(+117 files in other folders)
